# synthmusic_bot

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  railway.toml  requirements.txt  test_imports.py
app/: __init__.py  config.py  logging_config.py  main.py
app/app/: main.py
app/app/bot/: callbacks.py  states.py
app/app/bot/handlers/: start.py
app/app/bot/keyboards/: booking.py  common.py  pagination.py
app/app/db/: session.py
app/app/db/migrations/: env.py
app/app/services/: reports.py  schedule.py  users.py
app/bot/: routers.py
app/bot/handlers/: __init__.py  admin.py  booking.py  client.py  engineer.py  start.py
app/bot/keyboards/: admin.py  common.py
app/bot/middlewares/: __init__.py  db_user.py  user_context.py
app/db/: base.py  functions.py  models.py  session.py
app/db/migrations/versions/: 0001_initial.py
app/services/: bonuses.py  stats.py  users.py
app/utils/: format.py
migrations/: env.py
migrations/versions/: 2026_06_18_000000_initial_migration.py
src/bot/: config.py  database.py  main.py  states.py
src/bot/handlers/: admin.py  client.py  engineer.py
src/bot/keyboards/: admin.py  client.py  common.py  engineer.py
src/bot/middlewares/: __init__.py  role_middleware.py
src/models/: bonus.py  booking.py  day_off.py  referral.py  schedule.py  user.py
studio_recording_bot/: README.md  docker-compose.yml
studio_recording_bot/app/db/: enums.py
studio_recording_bot/app/services/: booking.py  notifications.py
studio_recording_bot/tests/: test_time_slots.py
(+3 files in other folders)
