[project]
name = "studio-recording-bot"
version = "1.0.0"
description = "Telegram booking bot for a recording studio"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
    "SQLAlchemy>=2.0,<3",
    "APScheduler>=3.10,<4",
    "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

